<resources>
    <string name="app_name">E-KoteManagement</string>
    <string name="welcome">Welcome to E-KOTE</string>
    <string name="admin_login">Admin Login</string>
    <string name="create_new_admin">Create New Admin</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="users_text">USERS</string>
    <string name="add_soldier_text">ADD SOLDIER</string>
    <string name="user_id_hint">User ID</string>
    <string name="user_name_hint">User Name</string>
    <string name="date_of_joining_text">Date of Joining</string>
    <string name="add_soldier_btn">Add Soldier</string>
    <string name="user_can_tap_to_open_add_user_screen_text">User can tap to open add user screen</string>
    <string name="add_user_bottom_nav">Add User</string>
    <string name="view_user_bottom_nav">View User</string>
    <string name="remove_user_bottom_nav">Remove User</string>
    <string name="bottom_nav_view_user">bottom nav view user</string>
    <string name="bottom_nav_remove_user">Bottom nav remove user</string>
    <string name="view_user_title">Users</string>
    <string name="delete_user_text">Delete User</string>
    <string name="delete_user_hint">User ID</string>
    <string name="btn_text_search">Search</string>
    <string name="name_text">Name:</string>
    <string name="delete_btn">Delete</string>
    <string name="id_text">ID:</string>
    <string name="rank_text">Rank:</string>
    <string name="dashboard_text">Dashboard</string>
    <string name="open">NavBar</string>
    <string name="close">NavBar</string>
    <string name="search_user">Search User</string>
    <string name="enter_user_id">Enter User ID</string>
    <string name="add_user_btn">Add User</string>

    <string name="btn_upload">Upload</string>
    <string name="army_number">Army Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dob">Date Of Birth (dd/MM/yyyy)</string>
    <string name="upload_image_content_description">Image View Upload</string>


    <!--    Add user Dropdown menu items ranks-->
    <string-array name="army_ranks">
        <item>Lieutenant</item>
        <item>Captain</item>
        <item>Major</item>
        <item>Lieutenant Colonel</item>
        <item>Colonel</item>
        <item>Brigadier</item>
        <item>Major General</item>
        <item>Lieutenant General</item>
        <item>General</item>
    </string-array>

    <string-array name="weapon_type">
        <item>Assault Rifle</item>
        <item>Pistol</item>
        <item>Sniper Rifle</item>
        <item>SMG</item>
        <item>LMG</item>
    </string-array>

    <string-array name="assault_rifle">
        <item>INSAS</item>
        <item>AK-47</item>
        <item>AK-203</item>
        <item>SIG Sauer 716</item>
        <item>Tavor</item>
    </string-array>

    <string-array name="pistols">
        <item>Pistol Auto 9mm 1A</item>
        <item>Glock</item>
    </string-array>

    <string-array name="sub_machine_guns">
        <item>Heckler &amp; Koch MP5</item>
        <item>Micro-UZI</item>
        <item>SAF Carbine 2A1</item>
    </string-array>

    <string-array name="light_machine_guns">
        <item>INSAS LMG</item>
        <item>IMI Negev NG7</item>
        <item>MK 48</item>
        <item>IMI Negev NG5</item>
        <item>MG 2A1</item>
    </string-array>

    <string-array name="sniper_rifles">
        <item>Dragunov SVD</item>
        <item>Steyr SSG 69</item>
        <item>IMI Galil</item>
        <item>Barret M95</item>
        <item>Vidhwansak</item>
        <item>OSV-96</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rank">Rank</string>
    <string name="army_number_of_the_user">Army Number of the user.</string>
    <string name="update_soldier_btn">Update Soldier</string>
    <string name="return_string">Return</string>
    <string name="issue_string">Issue</string>
    <string name="select_weapon_type">Select Weapon Type</string>
    <string name="select_weapon">Select Weapon</string>
    <string name="enter_serial_number">Enter Serial Number</string>
    <string name="weapon_name">Weapon Name</string>
    <string name="weapon_type">Weapon Type</string>
    <string name="update">Update</string>
    <string name="date_of_birth">DOB:</string>
    <string name="register_admin">Register Admin</string>
    <string name="users">Users</string>
    <string name="inventory">Inventory</string>
    <string name="maintenance">Maintenance</string>

    <string name="super_register_admin">Register Admin</string>
    <string name="super_users">Users</string>
    <string name="super_inventory">Inventory</string>
    <string name="super_maintenance">Maintenance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


</resources>