<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="10dp">

    <!-- BODY -->

    <TextView
        android:id="@+id/tvDeleteUserTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/delete_user_text"
        android:textColor="@color/primaryColor"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlSearchUser"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_user_id"
        app:endIconDrawable="@drawable/search"

        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDeleteUserTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSearchUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:paddingHorizontal="30dp"
        android:paddingVertical="12dp"
        android:text="@string/btn_text_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlSearchUser" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/border"
        android:paddingHorizontal="20dp"
        android:paddingVertical="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <!--        CONSTANTS-->

        <TextView
            android:id="@+id/tvNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            android:textColor="@color/primaryColor"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvIDText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/id_text"
            android:textColor="@color/primaryColor"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNameText" />

        <TextView
            android:id="@+id/tvRankText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/rank_text"
            android:textColor="@color/primaryColor"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvIDText" />


        <TextView
            android:id="@+id/tvDateOfJoiningText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/date_of_birth"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/btnDelete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRankText"

            />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/red"
            android:paddingHorizontal="30dp"
            android:paddingVertical="12dp"
            android:text="@string/delete_btn"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDateOfJoiningText" />


        <!--        VARIABLES-->


        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/tvNameText"
            app:layout_constraintStart_toStartOf="@id/tvID"
            app:layout_constraintTop_toTopOf="@id/tvNameText" />


        <TextView
            android:id="@+id/tvID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/tvIDText"
            app:layout_constraintStart_toStartOf="@id/tvRank"
            app:layout_constraintTop_toTopOf="@id/tvIDText" />


        <TextView
            android:id="@+id/tvRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rank_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/tvRankText"
            app:layout_constraintStart_toStartOf="@id/tvDateOfJoining"
            app:layout_constraintTop_toTopOf="@id/tvRankText" />


        <TextView
            android:id="@+id/tvDateOfJoining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/date_of_joining_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/tvDateOfJoiningText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvDateOfJoiningText"
            app:layout_constraintTop_toTopOf="@id/tvDateOfJoiningText" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>