<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUserActivity">
    <!--Top Navigation Bar-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTopNavBar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/primaryColor"
        app:layout_constraintTop_toTopOf="parent">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@drawable/menu"
            android:popupTheme="@style/Theme.AppCompat.Light.Dialog.Alert"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <!--        Add weight-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/users_text"
            android:textColor="@color/cardColor"
            android:textFontWeight="700"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/toolbar"
            app:layout_constraintTop_toTopOf="parent"


            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--Body-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/border"
        android:paddingHorizontal="15dp"
        android:paddingVertical="35dp"
        app:layout_constraintBottom_toTopOf="@id/btnAddUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clTopNavBar">
        <!--        Add weight-->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_user_text"
            android:textColor="#606C38"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlUserID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            android:hint="@string/user_id_hint"
            app:boxBackgroundColor="#FEFAE0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/teUserID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/user_name_hint"
            app:boxBackgroundColor="#FEFAE0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tlUserID">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/teUserName"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </com.google.android.material.textfield.TextInputLayout>


        <Spinner
            android:id="@+id/spinnerRank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/tlUserName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlDateOfJoining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/date_of_joining_text"
            app:boxBackgroundColor="#FEFAE0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerRank">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/teDateOfJoining"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnAddUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#606C38"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:text="@string/add_user_btn"
        android:textColor="#FEFAE0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/clBottomNavBar"
        app:layout_constraintTop_toBottomOf="@id/clBody" />

    <!--   Bottom Navigation Bar-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBottomNavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#606C38"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!--Add user-->


        <ImageView
            android:id="@+id/person_add_alt_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_container"
            android:contentDescription="@string/user_can_tap_to_open_add_user_screen_text"
            android:foreground="@drawable/person_add_alt_1"
            android:foregroundGravity="center"
            app:layout_constraintEnd_toStartOf="@id/remove_red_eye"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAddUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_user_bottom_nav"
            android:textColor="#DDA15E"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/person_add_alt_1"
            app:layout_constraintStart_toStartOf="@id/person_add_alt_1"
            app:layout_constraintTop_toBottomOf="@id/person_add_alt_1" />

        <!--        View User-->

        <ImageView
            android:id="@+id/remove_red_eye"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/remove_red_eye"
            android:contentDescription="@string/bottom_nav_view_user"
            app:layout_constraintEnd_toStartOf="@id/person_remove_alt_1"
            app:layout_constraintStart_toEndOf="@id/person_add_alt_1"
            app:layout_constraintTop_toTopOf="parent"

            />

        <TextView
            android:id="@+id/tvViewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_user_bottom_nav"
            android:textColor="#ffffff"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/remove_red_eye"
            app:layout_constraintStart_toStartOf="@id/remove_red_eye"
            app:layout_constraintTop_toBottomOf="@id/remove_red_eye" />

        <!--        Remove User-->
        <ImageView
            android:id="@+id/person_remove_alt_1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/person_remove_alt_1"
            android:contentDescription="@string/bottom_nav_remove_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/remove_red_eye"
            app:layout_constraintTop_toTopOf="parent"

            />

        <TextView
            android:id="@+id/tvRemoveUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_user_bottom_nav"
            android:textColor="#ffffff"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/person_remove_alt_1"
            app:layout_constraintStart_toStartOf="@id/person_remove_alt_1"
            app:layout_constraintTop_toBottomOf="@id/person_remove_alt_1" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>