<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/materialCardView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/cardColor"
    app:cardElevation="@dimen/_7sdp"
    app:contentPadding="@dimen/_7sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civSoldiers"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/soldierimage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvArmyNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/army_number"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toEndOf="@id/civSoldiers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rank"
            android:textSize="@dimen/_14sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toEndOf="@id/civSoldiers"
            app:layout_constraintTop_toBottomOf="@id/tvArmyNumber"/>

        <TextView
            android:id="@+id/tvSoldierName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:text="@string/first_name"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toEndOf="@id/civSoldiers"
            app:layout_constraintTop_toBottomOf="@id/tvRank"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>